--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -33,10 +33,21 @@ nav div button{
     width: 50%;
     height: 75%;
     margin: auto;
-    display: inline-block;
 }
 
-.circle{
+.border{
+    border-color: #1C1D21 !important;
+}
+
+.circledropdown{
+    width: 100%;
+}
+
+ul{
+    list-style-type: none;
+}
+
+.horizantalcircles{
     margin: 5px;
     height: 100px;
     width: 100px;
@@ -46,18 +57,18 @@ nav div button{
     margin-left: 29px;
 }
 
-.border{
-    border-color: #1C1D21 !important;
+.bg-blue{
+    background-color: blue;
 }
 
-.circledropdown{
-    width: 5%;
+.bg-red{
+    background-color: red;
 }
 
-ul{
-    list-style-type: none;
+.bg-yellow{
+    background-color: yellow;
 }
 
-.horizantal{
-    display: inline;
+.bg-green{
+    background-color: green;
 }
