--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -21,41 +21,81 @@ nav div button{
 
 /* the game */
 .board{
-    width: 400px;
+    width: 500px;
     background-color: beige;
-    height: 400px;
+    height: 1150px;
+    border-radius: 25px;
+    display: block;
+    margin: 10px auto !important;
+    padding: 15px;
+    
 
 }
 
 .boardpiny{
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     background-color: black;
     border-radius: 50%;
 
 }
 
 .boardpinx{
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     background-color: black;
     border-radius: 50%;
     display: inline-block;
+    margin: 2px auto;
 
 }
 
-.bg-blue{
-    background-color: blue;
-}
-
-.bg-red{
+.boardpinred{
+    width: 100px;
+    height: 100px;
     background-color: red;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 2px auto;
 }
 
-.bg-yellow{
-    background-color: yellow;
+.boardpinblue{
+    width: 100px;
+    height: 100px;
+    background-color: blue;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 2px auto;
 }
 
-.bg-green{
+.boardpingreen{
+    width: 100px;
+    height: 100px;
     background-color: green;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 2px auto;
+}
+
+.boardpinyellow{
+    width: 100px;
+    height: 100px;
+    background-color: yellow;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 2px auto;
+}
+
+.boardpinpurple{
+        width: 100px;
+        height: 100px;
+        background-color: purple;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 2px auto;
+    
+}
+
+.form-group{
+    margin: 40px;
 }
