--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,148 +1,161 @@
 #background {
-    background-color: #1C1D21;
+background-color: #1C1D21;
 }
 .logbtns{
-    width: 100%;
-    left:0;
-    right:0;
-    top:0;
-    bottom:0;
-    margin: auto;
-    display: block;
+width: 100%;
+left:0;
+right:0;
+top:0;
+bottom:0;
+margin: auto;
+display: block;
 }
 nav div button{
-    margin: 5px;
+margin: 5px;
 }
 .blackground{
-    background-color: #1C1D21;
-    height: 100%;
-    width: 100%;
+background-color: #1C1D21;
+height: 100%;
+width: 100%;
 }
 /* the game */
 .board{
-    width: 500px;
-    background-color: beige;
-    height: 100%;
-    border-radius: 25px;
-    display: block;
-    margin: 10px auto !important;
-    padding: 15px;
-}
-.boardpiny{
-    width: 100px;
-    height: 100px;
-    background-color: black;
-    border-radius: 50%;
+width: 500px;
+background-color: beige;
+height: 100%;
+border-radius: 25px;
+display: block;
+margin: 10px auto !important;
+padding: 15px;
 }
 .boardpinx{
-    width: 100px;
-    height: 100px;
-    background-color: black;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 2px;
+width: 100px;
+height: 100px;
+background-color: black;
+border-radius: 50%;
+display: inline-block;
+margin: 2px;
 }
 .boardpinred{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 2px auto;
+width: 100px;
+height: 100px;
+background-color: red;
+border-radius: 50%;
+display: inline-block;
+margin: 2px;
 }
 .boardpinblue{
-    width: 100px;
-    height: 100px;
-    background-color: blue;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 2px auto;
+width: 100px;
+height: 100px;
+background-color: blue;
+border-radius: 50%;
+display: inline-block;
+margin: 2px;
 }
 .boardpingreen{
-    width: 100px;
-    height: 100px;
-    background-color: green;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 2px auto;
+width: 100px;
+height: 100px;
+background-color: green;
+border-radius: 50%;
+display: inline-block;
+margin: 2px;
 }
 .boardpinyellow{
-    width: 100px;
-    height: 100px;
-    background-color: yellow;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 2px auto;
+width: 100px;
+height: 100px;
+background-color: yellow;
+border-radius: 50%;
+display: inline-block;
+margin: 2px;
 }
 .boardpinpurple{
-    width: 100px;
-    height: 100px;
-    background-color: purple;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 2px auto;
+width: 100px;
+height: 100px;
+background-color: purple;
+border-radius: 50%;
+display: inline-block;
+margin: 2px;
+}
+.boardpinlg{
+width: 100px;
+height: 100px;
+background-color: lightgreen;
+border-radius: 50%;
+display: inline-block;
+margin: 2px;
+}
+.boardpinpink{
+width: 100px;
+height: 100px;
+background-color: pink;
+border-radius: 50%;
+display: inline-block;
+margin: 2px;
+}
+.boardpinviolet{
+width: 100px;
+height: 100px;
+background-color: violet;
+border-radius: 50%;
+display: inline-block;
+margin: 2px;
+}
+.boardpinorange{
+width: 100px;
+height: 100px;
+background-color: orange;
+border-radius: 50%;
+display: inline-block;
+margin: 2px auto;
+}
+.boardpinwhite{
+width: 100px;
+height: 100px;
+background-color: white;
+border-radius: 50%;
+display: inline-block;
+margin: 2px auto;
 }
 .pinplace{
-    width: 51px;
-    height: 100%;
-    float: right;
-    position: relative;
-    top: -1000px;
+width: 51px;
+height: 100%;
+float: right;
+position: relative;
+top: -973px;
 }
 .emptypin{
-    width: 25px;
-    height: 25px;
-    background-color: purple;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 2px auto;
+width: 25px;
+height: 25px;
+background-color: gold;
+border-radius: 50%;
+display: inline-block;
+margin: 2px auto;
 }
 .pinwhite{
-    width: 25px;
-    height: 25px;
-    background-color: white;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 2px auto;
+width: 25px;
+height: 25px;
+background-color: white;
+border-radius: 50%;
+display: inline-block;
+margin: 2px auto;
 }
 .pinblack{
-    width: 25px;
-    height: 25px;
-    background-color: black;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 2px auto;
+width: 25px;
+height: 25px;
+background-color: black;
+border-radius: 50%;
+display: inline-block;
+margin: 2px auto;
 }
 .form-group{
-    margin: 50px;
-    width: 75%;
-    padding: 2px;
-    
+margin: 50px;
+width: 75%;
+padding: 2px;
 }
-
 .outer{
-    margin: 0px auto;
-    background-color: beige;
-    width: 20%;
-    border-radius: 25px;
-    padding: 5px;
-
-}
-
-.gameinfopopup{
-    width: 400px;
-    height: 400px;
-    margin: auto;
-    position: absolute;
-    top: 0px; bottom: 0px;
-    right: 0px; left: 0px;
-    background: yellow;
-    color: black;
-}
-
-.leaderboards{
-    float: left;
-    width: 400px;
-    height: 300px;
-    background-color: beige;
+margin: 0px auto;
+background-color: beige;
+width: 500px;
+border-radius: 25px;
+padding: 5px;
 }
